--- a/home.html
+++ b/home.html
@@ -95,10 +95,10 @@
                             <ul class=" nav navbar-nav">
                                 <li class=""><a href="home.html">Home</a>                                                                 
                                 </li>
-                                <li class="has-child"><a href="#">Jobs</a>
+                                <li class="has-child"><a href="jobs.html">Jobs</a>
                                                                                                    
                                 </li>
-                                <li class="has-child"><a href="#">Employers</a>
+                                <li class="has-child"><a href="employer.html">Employers</a>
                                                                                                  
                                 </li>
                                 <li class="has-child"><a href="#">Asessment & Training</a>
