--- a/jobs.html
+++ b/jobs.html
@@ -70,7 +70,7 @@
                 
                         <div class="logo-header">
                             <div class="logo-header-inner logo-header-one">
-                                <a href="index.html">
+                                <a href="home.html">
                                 <img src="images/yes-lg-2.png" alt="">
                                 </a>
                             </div>
